aws-eks/k8s-yml-templates/core/ingress/NONPROD/prometheus-grafana-ingress.yml
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: prometheus
#  namespace: monitoring
#  annotations:
    # type of authentication
#    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - prometheus'  
#    kubernetes.io/ingress.class: nginx   
#spec:
#    rules:
#    - host: prometheus.cloudkube.xyz
#      http:
#        paths:
#        - backend:
#            serviceName: prometheus-kube-prometheus-prometheus
#            servicePort: 9090
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: thanos-web
#  namespace: monitoring
#  annotations:
#    kubernetes.io/ingress.class: nginx   
#spec:
#    rules:
#    - host: thanos.cloudkube.xyz
#      http:
#        paths:
#        - backend:
#            serviceName: thanos-web
#            servicePort: 10902
#---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx   
spec:
    tls:
      - hosts:
        - az-grafana-dev.cloudkube.xyz
        secretName: ingress-secret-tls 
    rules:
    - host: az-grafana-dev.cloudkube.xyz
      http:
        paths:
        - backend:
            serviceName: grafana
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
     #type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
     #name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
     #message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - alertmanager'    
    kubernetes.io/ingress.class: nginx   
spec:
    rules:
    - host: alertmanager.cloudkube.xyz
      http:
        paths:
        - backend:
            serviceName: prometheus-kube-prometheus-alertmanager
            servicePort: 9093
---
#---
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: alertmanager
#  namespace: monitoring
#  annotations:
    # type of authentication
#    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
#    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
#    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - alertmanager'    
#    kubernetes.io/ingress.class: nginx   
#spec:
#    rules:
#    - host: alertmanager.cloudkube.xyz
#      http:
#        paths:
#        - backend:
#            serviceName: prometheus-kube-prometheus-alertmanager
#            servicePort: 9093
#---
